[#157774616] Fixed header styles on mobile.

--- a/reactjs/components/organisms/Header/_styles.scss
+++ b/reactjs/components/organisms/Header/_styles.scss
@@ -4,22 +4,30 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 48px;
+  height: $header-height-sm;
   z-index: $zindex-fixed;
   box-shadow: $shadow1;
   display: flex;
   padding: 0 0.5em;
   justify-content: space-between;
   @include media-breakpoint-up(md) {
-    height: 80px;
+    height: $header-height-md;
     padding: 0 1.5em;
   }
+
   a:hover {
     text-decoration: none;
   }
 
   .left {
     flex: 1 1 auto;
+  }
+
+  .left,
+  .right {
+    > a {
+      display: inline-block;
+    }
   }
 
   .beta-label {
@@ -36,24 +44,6 @@
     @include media-breakpoint-up(lg) {
       width: 56px;
       height: 50px;
-    }
-  }
-
-  button[class^=dropdown---dropdown-toggle---] {
-    font-size: 1em;
-    margin: 0;
-    padding-top: 0;
-  }
-
-  div[class^=dropdown---dropdown-menu---] {
-    &::after {
-      right: 3px;
-      @include media-breakpoint-up(md) {
-        right: 10px;
-      }
-      @include media-breakpoint-up(lg) {
-        right: 40px;
-      }
     }
   }
 }
